# chleb-od-franka

./: Cargo.toml  README.md
migrations/2018-10-20-191126_add_table_users/: up.sql
migrations/2018-10-20-205529_alter_table_users_add_token/: up.sql
migrations/2018-11-02-112632_add_table_retail/: down.sql  up.sql
migrations/2018-11-02-113757_add_table_wholesale/: down.sql  up.sql
migrations/2018-12-01-105051_add_table_categories/: down.sql  up.sql
react/: package-lock.json  package.json
react/public/: index.html
react/src/: about.tsx  admin.tsx  app.tsx  contact.tsx  editor.tsx  example-settings.tsx  footer.tsx  header.tsx  index.tsx  login.tsx  main.tsx  price.tsx  retail.tsx  utils.tsx  wholesale.tsx
react/src/css/: app.css  footer.css  header.css  main.css  master.css  product.css
src/: auth.rs  categories.rs  crypto.rs  main.rs  models.rs  order.rs  products.rs  schema.rs  state.rs  users.rs
