[package]
name = "cof"
version = "0.1.0"
authors = ["Szymon Zyguła <szymon@zygula.eu>"]

[dependencies]
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
diesel = { version = "1.3.*", features = ["r2d2", "postgres"] }
r2d2 = "0.8.*"
dotenv = "0.13.*"
actix-web = "0.7.*"
rand = "0.6.*"
base64 = "0.10.*"
argon2rs = "0.2.*"
futures = "0.1.*"
